SIXTH-185 fixed align center for icon count

--- a/src/component/HeaderWishlist/HeaderWishlist.style.scss
+++ b/src/component/HeaderWishlist/HeaderWishlist.style.scss
@@ -37,9 +37,11 @@
                     color: $white;
                     display: inline-block;
                     position: absolute;
-                    font-size: 12px;
-                    left: -7px;
-                    top: 10px;
+                    font-size: 10px;
+                    left: -15px;
+                    text-align: center;
+                    top: 11px;
+                    width: 23px;
                     z-index: 99;
                 }
             }
